# autotests-ui

./: browser-state.json  playwright_courses.py  playwright_registration_button.py  pyproject.toml  pytest.ini  registration.py  test_courses.py
test/: conftest.py  test_courses.py
tests/: conftest.py  test_authorization.py  test_courses.py
