[tool.poetry]
name = "autotests-ui"
version = "0.1.0"
description = ""
authors = ["skazakov <skazakov@rvision.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.4.1"
playwright = "^1.53.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^80.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
